add google fonts

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,4 +1,8 @@
 body{
 	background: grey;
 	color: black;
+	font-family: 'Pattaya', sans-serif;
+}
+h1 {
+	font-family: 'El Messiri', sans-serif;
 }
